--- a/src/app/Our-Services/services.component.html
+++ b/src/app/Our-Services/services.component.html
@@ -1,6 +1,8 @@
 
-<p class="h1 m-3 ms-5"><u>Services</u></p> 
-<p class="m-1 p-3">Metropolis is a global leader in Blood Tests, Diagnostics and Wellness services. With operations across India, Africa, South Asia, and Middle East, we are trusted millions of Customers for their Inner Health Management
+<!-- <p class="h1 m-3 ms-5 text-center"><u> Our Services</u></p>  -->
+<p class="h1 m-3 ms-5 text-center"> Our Services</p> 
+<p class="m-1 p-3">Metropolis is a global leader in Blood Tests, Diagnostics and Wellness services. With operations across India, Africa,
+     South Asia, and Middle East, we are trusted millions of Customers for their Inner Health Management.
 
 </p>
 
