--- a/src/app/images/images.component.html
+++ b/src/app/images/images.component.html
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div class="card ms-3" style="width: 18rem;">
-            <img src="assets/Images/Dr. with Patient-2.jpg" class="card-img-top" alt="...">
+            <img src="assets/Images/Images-6.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div class="card ms-3" style="width: 18rem;">
-            <img src="assets/Images/Dr. Holding Blood on Slide-3.jpg" class="card-img-top" alt="...">
+            <img src="assets/Images/Images-7.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's
@@ -61,41 +61,7 @@
             </div>
         </div>
         <div class="card ms-3" style="width: 18rem;">
-            <img src="assets/Images/COVID-19 Sample-4.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-            </div>
-        </div>
-    </div>
-    <div class=" card-group mt-4 p-3">
-        <div class="card ms-3" style="width: 18rem;">
-            <img src="assets/Images/Dr. Holding Blood Sample-1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="card-text">
-                    After collecting the blood sample of patient & we collect the blood very carefully and neatly.
-                </p>
-            </div>
-        </div>
-        <div class="card ms-3" style="width: 18rem;">
-            <img src="assets/Images/Dr. with Patient-2.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-            </div>
-        </div>
-        <div class="card ms-3" style="width: 18rem;">
-            <img src="assets/Images/Dr. Holding Blood on Slide-3.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-            </div>
-        </div>
-        <div class="card ms-3" style="width: 18rem;">
-            <img src="assets/Images/COVID-19 Sample-4.jpg" class="card-img-top" alt="...">
+            <img src="assets/Images/Images-8.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's
@@ -105,7 +71,7 @@
     </div>
     <div class=" card-group mt-4 p-3">
         <div class="card ms-3" style="width: 18rem;">
-            <img src="assets/Images/Dr. Holding Blood Sample-1.jpg" class="card-img-top" alt="...">
+            <img src="assets/Images/Images-9.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text">
                     After collecting the blood sample of patient & we collect the blood very carefully and neatly.
@@ -113,7 +79,41 @@
             </div>
         </div>
         <div class="card ms-3" style="width: 18rem;">
-            <img src="assets/Images/Dr. with Patient-2.jpg" class="card-img-top" alt="...">
+            <img src="assets/Images/Images-10.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's
+                    content.</p>
+            </div>
+        </div>
+        <div class="card ms-3" style="width: 18rem;">
+            <img src="assets/Images/Images-11.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's
+                    content.</p>
+            </div>
+        </div>
+        <div class="card ms-3" style="width: 18rem;">
+            <img src="assets/Images/Images-12.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's
+                    content.</p>
+            </div>
+        </div>
+    </div>
+    <div class=" card-group mt-4 p-3">
+        <div class="card ms-3" style="width: 18rem;">
+            <img src="assets/Images/Images-13.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <p class="card-text">
+                    After collecting the blood sample of patient & we collect the blood very carefully and neatly.
+                </p>
+            </div>
+        </div>
+        <div class="card ms-3" style="width: 18rem;">
+            <img src="assets/Images/Images-14.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's
