--- a/src/app/packages/packages.component.html
+++ b/src/app/packages/packages.component.html
@@ -1,7 +1,7 @@
 <div class="card text-white">
     <img src="assets/Package-img.jpg" class="card-img" alt="..." height="300" style="width: 100%;">
     <div class="card-img-overlay text-center" style="background-color: rgba(50, 50, 50, 0.6);">
-        <h1 class="h1 text-center">Our Packages</h1>
+        <h1 class="h1 text-center mt-5">Our Packages</h1>
         <blockquote class="blockquote text-center">
             <p> Your Path to Comprehensive Health and Wellness.</p>
         </blockquote>
@@ -27,16 +27,25 @@
 
 <div class="container mt-5">
     <div class="card mb-5" style="max-width: 100%;">
-        <div class="row g-0">
+        <div class="row g-">
             <div class="col-md-4">
                 <img src="assets/Images/Dr. with Patient-2.jpg" class="img-fluid " alt="...">
             </div>
             <div class="col-md-8 ">
                 <div class="card-body p-5">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <h5 class="card-title">COMPLETE BLOOD COUNT; CBC</h5>
+                    <p class="card-text">
+                        Complete blood count (CBC) is a blood test used to evaluate your overall health
+                        & wellness and detect a wide range of disorders like anemia, infection and leukemia. This test
+                        measures several components and features of your blood like Red blood cells which carry oxygen;
+                        White blood cells which fight infection; Hemoglobin the oxygen carrying protein in red blood
+                        cells; Hematocrit proportion of red blood cells to the fluid component or plasma in your blood;
+                        Platelets which help with blood clotting. Abnormal increases or decreases in cell counts as
+                        revealed in a Complete blood count may indicate that you have an underlying medical condition
+                        that calls for further evaluation. This test also helps to monitor a known medical condition.
+                    </p>
+                    <h5 class="card-text"><small class="text-muted">₹ 350 </small></h5>
+
                 </div>
             </div>
         </div>
@@ -48,10 +57,22 @@
             </div>
             <div class="col-md-8 ">
                 <div class="card-body p-5">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <h5 class="card-title">HbA1c; GLYCOSYLATED HEMOGLOBIN</h5>
+                    <p class="card-text">
+                        HbA1c also called Glycated hemoglobin gives the average sugar level in the body over a period of
+                        2 to 3 months unlike blood sugar which indicates daily level. This test is used to diagnose
+                        prediabetes, diagnose type 1 and type 2 diabetes & monitor your diabetes treatment plan. Initial
+                        A1C test also helps to establish your baseline level. How often you need this test depends on
+                        the type of diabetes, your treatment plan, how well you are meeting treatment goals and your
+                        doctor's clinical judgment. The recommended protocol for this test is: Once every year if you
+                        have prediabetes; Twice a year if you do not use insulin and your blood sugar level is
+                        consistently within your target range; Four times a year if you take insulin or have trouble
+                        keeping your blood sugar level within your target range.
+
+
+                    </p>
+                    <h5 class="card-text"><small class="text-muted">₹ 440 </small></h5>
+
                 </div>
             </div>
         </div>
@@ -63,10 +84,17 @@
             </div>
             <div class="col-md-8 ">
                 <div class="card-body p-5">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <h5 class="card-title">URINE EXAMINATION, ROUTINE; URINE, R/E</h5>
+                    <p class="card-text">Urine analyses is a very useful test because it can often detect medical
+                        problems before additional symptoms arise. This test is most often performed to monitor overall
+                        health, to diagnose a medical problem or to monitor a medical condition like urinary tract
+                        infection, kidney stones, diabetes, liver & kidney problems. This test is routinely performed
+                        prior to any surgery. Your doctor may order a urinalysis if you experience symptoms such as
+                        blood in urine, back or abdominal pain, painful urination, frequent urination & cloudy urine.
+
+                    </p>
+                    <h5 class="card-text"><small class="text-muted">₹ 120 </small></h5>
+
                 </div>
             </div>
         </div>
@@ -78,10 +106,18 @@
             </div>
             <div class="col-md-8 ">
                 <div class="card-body p-5">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <h5 class="card-title">THYROID PROFILE, TOTAL</h5>
+                    <p class="card-text">Thyroid profile test includes thyroid hormones T3, T4 & TSH which helps to
+                        evaluate the functioning of thyroid gland in the body. This profile indicates whether thyroid
+                        gland is under-functioning or over-functioning or the function is normal. It also helps to
+                        monitor patients who are on treatment for thyroid disease. Persons at high risk of thyroid
+                        disease are newborns, those with a strong family history of thyroid disease, the elderly
+                        population, women 4 to 8 weeks after delivery, patients with autoimmune diseases and those on
+                        iodine deficient diet.
+
+                    </p>
+                    <h5 class="card-text"><small class="text-muted">₹ 550 </small></h5>
+
                 </div>
             </div>
         </div>
@@ -93,10 +129,22 @@
             </div>
             <div class="col-md-8 ">
                 <div class="card-body p-5">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <h5 class="card-title">GLUCOSE, FASTING (F)</h5>
+                    <p class="card-text">Blood glucose / sugar is the main energy giving source in your body. It comes
+                        from the food you eat and is carried by blood to all the cells to use for its various functions.
+                        If sugar rises in your blood, you suffer from Diabetes which can be Type 1 or Type 2 or
+                        Prediabetes. A reading of 126 mg/dL in a fasting state or greater than 200 mg/dL after 2 hours
+                        of eating or glucose drink is considered diabetic. If your values are between 100 to 125 mg/dL,
+                        you are considered to be prediabetic. You must test your blood glucose levels regularly if you
+                        are above 35 years of age; body mass index is higher than 25; women with diabetes during
+                        pregnancy; suffer from prediabetes. This test is useful to monitor the effect of diabetes
+                        medications; identify blood sugar levels that are high or low; track your progress in reaching
+                        your overall treatment goals; learn how diet and exercise affect blood sugar levels; understand
+                        how other factors, such as illness or stress affect blood sugar levels.
+
+                    </p>
+                    <h5 class="card-text"><small class="text-muted">₹ 80 </small></h5>
+
                 </div>
             </div>
         </div>
@@ -108,10 +156,22 @@
             </div>
             <div class="col-md-8 ">
                 <div class="card-body p-5">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <h5 class="card-title">LIVER & KIDNEY PANEL</h5>
+                    <p class="card-text">Liver function tests (LFT) are blood tests which are used to diagnose and
+                        monitor liver disease or damage. Levels that are higher or lower than normal can indicate liver
+                        problems. These are a group of tests which are helpful to screen for liver infections; determine
+                        how well a treatment is working; measure the severity of a disease; monitor possible side
+                        effects of medications. Kidney function tests (KFT) are usually ordered when a patient has risk
+                        factors for kidney dysfunction such as high blood pressure (hypertension), diabetes,
+                        cardiovascular disease, obesity, elevated cholesterol or a family history of kidney disease. It
+                        may also be ordered when someone has signs and symptoms of kidney disease, though in early stage
+                        often no noticeable symptoms are observed. Kidney panel is useful for general health screening;
+                        screening patients at risk of developing kidney disease; management of patients with known
+                        kidney disease.
+
+                    </p>
+                    <h5 class="card-text"><small class="text-muted">₹ 1550 </small></h5>
+
                 </div>
             </div>
         </div>
@@ -123,10 +183,18 @@
             </div>
             <div class="col-md-8 ">
                 <div class="card-body p-5">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <h5 class="card-title">DENGUE FEVER NS1 ANTIGEN, EIA</h5>
+                    <p class="card-text">Dengue fever is a mosquito borne illness prevalent in Southeast Asia, Latin
+                        America & Africa. It is caused by the bite of infected Aedes mosquito. There are 4 types of
+                        Dengue viruses and all of them can cause disease. Symptoms are like flu resulting in fever,
+                        headache & muscle pain. Later on a rash may also appear. Severe infection can cause bleeding &
+                        you may go into shock. Detection of NS1 antigen is associated with a higher risk of developing
+                        severe illness specially if positive beyond 5th day of fever. This is a sensitive test for the
+                        detection of NS1 antigen.
+
+                    </p>
+                    <h5 class="card-text"><small class="text-muted">₹ 600 </small></h5>
+
                 </div>
             </div>
         </div>
@@ -138,10 +206,18 @@
             </div>
             <div class="col-md-8 ">
                 <div class="card-body p-5">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <h5 class="card-title">CULTURE, URINE</h5>
+                    <p class="card-text">This test is used to diagnose any bacterial infection of the urinary tract
+                        which is the pathway urine takes till it is excreted out of the body. This test tells your
+                        doctor what bacteria are causing your infection and which medications will be most effective.
+                        Your doctor may order urine culture if you have symptoms such as blood in urine, burning
+                        sensation, painful urination, frequent urination & cloudy urine. Often symptoms clear up within
+                        a few days of starting treatment but you must take the entire course of antibiotics as
+                        prescribed.
+
+                    </p>
+                    <h5 class="card-text"><small class="text-muted">₹ 810 </small></h5>
+
                 </div>
             </div>
         </div>
@@ -153,10 +229,17 @@
             </div>
             <div class="col-md-8 ">
                 <div class="card-body p-5">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <h5 class="card-title">PLATELET COUNT</h5>
+                    <p class="card-text">Platelets (thrombocytes) are colorless blood cells that help blood clot.
+                        Platelets stop bleeding by clumping and forming plugs in blood vessel injuries. Low platelet
+                        counts are seen in infections like Dengue, bone marrow disorder such as leukemia or an immune
+                        system problem and can be a side effect of taking certain medications. It affects both children
+                        and adults. High platelet counts usually do not produce any symptoms. They are mainly a reaction
+                        to infections or due to some problem in the bone marrow.
+
+                    </p>
+                    <h5 class="card-text"><small class="text-muted">₹ 50 </small></h5>
+
                 </div>
             </div>
         </div>
@@ -168,10 +251,15 @@
             </div>
             <div class="col-md-8 ">
                 <div class="card-body p-5">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <h5 class="card-title">WIDAL SLIDE AGGLUTINATION TEST</h5>
+                    <p class="card-text">
+                        Widal test (Slide method) is used to detect both typhoid & paratyphoid fevers.
+                        Contaminated food and water or close contact with an infected person causes typhoid fever. It is
+                        a bacterial infection caused by Salmonella. Symptoms include high fever, headache, stomach pain,
+                        constipation or diarrhea. As a precautionary measure, avoid food that is stored or served at
+                        room temperature. It is recommended to confirm a positive result by blood culture.
+                    </p>
+                    <h5 class="card-text"><small class="text-muted">₹ 290 </small></h5>
                 </div>
             </div>
         </div>
