--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
 <!-- <app-carousel></app-carousel> -->
+<!-- <app-home></app-home> -->
 
 <app-footer></app-footer>
 
