--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,6 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <footer class="footer  mt-5">
 
@@ -7,29 +9,29 @@
             <div class="footer-col">
                 <h4>Company</h4>
                 <ul>
-                    <li><a href="#">About us</a></li>
-                    <li><a href="#">Our Services</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Affiliate Program</a></li>
+                    <li><a routerLink="/about">About us</a></li>
+                    <li><a routerLink="/service">Our Services</a></li>
+                    <li><a routerLink="/privacy">Privacy Policy</a></li>
+                    <li><a routerLink="/image">Images</a></li>
                 </ul>
             </div>
             <div class="footer-col">
                 <h4>Get Help</h4>
                 <ul>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Shipping</a></li>
-                    <li><a href="#">Returns</a></li>
-                    <li><a href="#">Order Status</a></li>
-                    <li><a href="#">Payment Options</a></li>
+                    <li><a routerLink="/contact">FAQ</a></li>
+                    <li><a routerLink="/contact">Shipping</a></li>
+                    <li><a routerLink="/contact">Returns</a></li>
+                    <li><a routerLink="/contact">Order Status</a></li>
+
                 </ul>
             </div>
             <div class="footer-col">
-                <h4>Online Shop</h4>
+                <h4>Contact Us</h4>
                 <ul>
-                    <li><a href="#">Watch</a></li>
-                    <li><a href="#">Bag</a></li>
-                    <li><a href="#">Shoes</a></li>
-                    <li><a href="#">Dress</a></li>
+                    <li><a routerLink="/contact">Address</a></li>
+                    <li><a routerLink="/contact">E-mail</a></li>
+                    <li><a routerLink="/contact">Phone</a></li>
+                    <li><a routerLink="/contact">Map</a></li>
                 </ul>
             </div>
             <div class="footer-col">
