--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,10 +1,55 @@
-.carousel-item{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
+.carousel {
+    width: 100%;
+    margin: 10px;
+    background-color: red;
 }
-.card{
-    padding: 30px;
-    margin: 30px;
+
+.carousel-item {
+    width: 100%;
+    /* height: 380px; */
+}
+
+.card {
+
+    height: auto;
+    width: 250px;
+    border: 2px solid red;
+    margin-right: 10px;
+}
+
+.card:hover {
+    box-shadow: 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030;
+
+    /* box-shadow: 1px 3px 8px #ffffff,1px 3px 8px #ffffff,1px 3px 8px #ffffff,1px 3px 8px #ffffff; */
+}
+
+.divider {
+    margin: 20px 0;
+    width: 100px;
+    height: 3px;
+    background: #00984a;
+    border-radius: 50px
+}
+
+
+
+
+
+
+
+.space-between {
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+.counter .background-sec {
+
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.flex-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
