--- a/src/app/packages/packages.component.css
+++ b/src/app/packages/packages.component.css
@@ -14,6 +14,18 @@
 
 }
 
-/* img {
-    border-radius: 1px;
-} */
+
+.container{
+    font-family: poppins;
+}
+
+.card-text small{
+    font-weight: 600;
+}
+
+.col-md-4 img{
+
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+}
