scroll button added

--- a/src/app/Our-Services/services.component.html
+++ b/src/app/Our-Services/services.component.html
@@ -1,8 +1,8 @@
-
 <!-- <p class="h1 m-3 ms-5 text-center"><u> Our Services</u></p>  -->
-<p class="h1 m-3 ms-5 text-center"> Our Services</p> 
-<p class="m-1 p-3">Metropolis is a global leader in Blood Tests, Diagnostics and Wellness services. With operations across India, Africa,
-     South Asia, and Middle East, we are trusted millions of Customers for their Inner Health Management.
+<p class="h1 m-3 ms-5 text-center"> Our Services</p>
+<p class="m-1 p-3">Metropolis is a global leader in Blood Tests, Diagnostics and Wellness services. With operations
+    across India, Africa,
+    South Asia, and Middle East, we are trusted millions of Customers for their Inner Health Management.
 
 </p>
 
@@ -11,9 +11,10 @@
         <div class="col">
             <div class="card h-100">
                 <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
+                <h5 class="card-title text-center m-4">Medical Store</h5>
                 <div class="card-body">
-                    <h5 class="card-title">Medical Store</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                    <p class="card-text text-center m-4">This is a longer card with supporting text below as a natural
+                        lead-in to
                         additional
                         content. This content is a little bit longer.</p>
                 </div>
@@ -22,18 +23,19 @@
         <div class="col">
             <div class="card h-100">
                 <img src="assets/Services/blood-collection.jpg" class="card-img-top" alt="...">
+                <h5 class="card-title text-center m-4">Home Blood Collection</h5>
                 <div class="card-body">
-                    <h5 class="card-title">Home Blood Collection</h5>
-                    <p class="card-text">This is a short card.</p>
+                    <p class="card-text  text-center m-4">This is a short card.</p>
                 </div>
             </div>
         </div>
         <div class="col">
             <div class="card h-100">
                 <img src="assets/Services/Report.jpg" class="card-img-top" alt="...">
+                <h5 class="card-title text-center m-4">Online Reporting</h5>
                 <div class="card-body">
-                    <h5 class="card-title">Online Reporting</h5>
-                    <p class="card-text">We Provide Online Reporting System, You Can Download Your Report by Your Phone
+                    <p class="card-text  text-center m-4">We Provide Online Reporting System, You Can Download Your
+                        Report by Your Phone
                         or PC via Your Mail.</p>
                 </div>
             </div>
@@ -41,9 +43,9 @@
         <div class="col">
             <div class="card h-100">
                 <img src="assets/Services/Doctor-suggestion.jpg" class="card-img-top" alt="...">
+                <h5 class="card-title text-center m-4">Doctor's Suggestion</h5>
                 <div class="card-body">
-                    <h5 class="card-title">Doctor's Suggestion</h5>
-                    <p class="card-text">
+                    <p class="card-text  text-center m-4">
                         Allahabad Diagnostics launching Soon a very dedicated "MEDICAL STORE" Where you all can get any
                         kind of medicine in very affordable prices.</p>
                 </div>
@@ -52,9 +54,10 @@
         <div class="col">
             <div class="card h-100">
                 <img src="assets/Services/X-Ray.jpg" class="card-img-top" alt="...">
+                <h5 class="card-title text-center m-4">X-Ray Center</h5>
                 <div class="card-body">
-                    <h5 class="card-title">X-Ray Center</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                    <p class="card-text  text-center m-4">This is a longer card with supporting text below as a natural
+                        lead-in to
                         additional
                         content.</p>
                 </div>
@@ -63,9 +66,10 @@
         <div class="col">
             <div class="card h-100">
                 <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
+                <h5 class="card-title text-center m-4">OPD Facility Available</h5>
                 <div class="card-body">
-                    <h5 class="card-title">OPD Facility Available</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                    <p class="card-text  text-center m-4">This is a longer card with supporting text below as a natural
+                        lead-in to
                         additional
                         content.</p>
                 </div>
@@ -74,20 +78,21 @@
         <div class="col">
             <div class="card h-100">
                 <img src="assets/Services/wellness.jpg" class="card-img-top" alt="...">
+                <h5 class="card-title text-center m-4">Wellness Solutions</h5>
                 <div class="card-body">
-                    <h5 class="card-title">Wellness Solutions</h5>
-                    <p class="card-text"> We offer pre-employment check-ups, employee health plans, and annual check-ups
-                        for corporates to build a healthy workforce. Metropolis’ Executive Health Check-up Program can
-                        be personalised to suit the organizational and employee needs.</p>
+                    <p class="card-text  text-center m-4"> We offer pre-employment check-ups, employee health plans, and
+                        annual check-ups
+                        for corporates to build a healthy workforce.</p>
                 </div>
             </div>
         </div>
         <div class="col">
             <div class="card h-100">
                 <img src="assets/Services/nutrition-diet.jpg" class="card-img-top" alt="...">
+                <h5 class="card-title text-center m-4">Nutrition & Dietition</h5>
                 <div class="card-body">
-                    <h5 class="card-title">Nutrition & Dietition</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                    <p class="card-text  text-center m-4">This is a longer card with supporting text below as a natural
+                        lead-in to
                         additional
                         content. This content is a little bit longer.</p>
                 </div>
@@ -95,3 +100,6 @@
         </div>
     </div>
 </div>
+
+
+<app-scroll-top-button></app-scroll-top-button>
