--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -4,7 +4,8 @@
         <!-- <h5 class="card-title">About Us</h5> -->
         <!-- <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
             This content is a little bit longer.</p> -->
-        <p class="card-text" style="float: right; margin-top: 150px;">Thank you for visiting this section, here you will know all about me.</p>
+        <p class="card-text" style="float: right; margin-top: 150px;">Thank you for visiting this section, here you will
+            know all about me.</p>
     </div>
 </div>
 
@@ -25,10 +26,10 @@
     </p>
 </div>
 
-<div class="row d-flex align-items-top p-3">
+<!-- <div class="row d-flex align-items-top p-3">
     <div class="col-sm-1"></div>
     <div class="col-sm-4">
-        <img src="assets/Dr. SRKP.jpg" class="img-fluid doctorImage "  alt="profile image">
+        <img src="assets/Dr. SRKP.jpg" class="img-fluid doctorImage " alt="profile image">
         <p class="doctorName mb-1"> <strong>Dr. Surendra Kumar Patel</strong></p>
         <p class="doctorDesignation ">(Managing Director)</p>
         <p class="md-desc"><i><b>As one of the country’s leading diagnostic companies, MHL
@@ -45,7 +46,7 @@
             Patel to their family and network. Our Chairman in his note has
             emphasized on Patel’ core vision of putting the patients first and our
             customer loyalty score is an outcome of this vision.</p>
-        
+
         <p class="text-justify"><strong>Going closer to the patient</strong><br>
             FY19 has ended on a positive note for us as the company delivered faster
             than industry growth. We are positive on the short and medium term growth
@@ -67,7 +68,7 @@
             Yours truly,<br><b>Surendra Kumar</b><br>Managing Director
         </p>
     </div>
-</div>
+</div> -->
 
 <div class="row m-5 mt-4">
 
@@ -87,38 +88,40 @@
 <h1 class="mt-5 ps-5"><u>Our Team</u></h1>
 <div class="card-group m-5">
     <div class="card ms-3">
-        <img src="assets/About-us.jpg" class="card-img-top" alt="...">
+        <img src="assets/Dr. SRKP.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Dr. Surendra Kumar</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+        </div>
+    </div>
+    <div class="card ms-3">
+        <img src="assets/Dr. SRKP.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                 content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
         </div>
     </div>
     <div class="card ms-3">
-        <img src="assets/About-us.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-        </div>
-    </div>
-    <div class="card ms-3">
-        <img src="assets/About-us.jpg" class="card-img-top" alt="...">
+        <img src="assets/Dr. SRKP.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
         </div>
     </div>
     <div class="card ms-3">
-        <img src="assets/About-us.jpg" class="card-img-top" alt="...">
+        <img src="assets/Dr. SRKP.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
                 content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
         </div>
     </div>
 </div>
+
+<app-scroll-top-button></app-scroll-top-button>
