--- a/src/app/packages/packages.component.html
+++ b/src/app/packages/packages.component.html
@@ -14,7 +14,8 @@
             <p>Find the most suitable full body checkup for you from our range of TruHealth Checkups.</p>
         </blockquote>
         <figcaption class="blockquote-footer mx-5">
-            Someone famous in <cite title="Source Title">Source Title</cite>
+            Dr. Surendra Kumar <cite title="Source Title">(Managing Director)</cite>
+            <!-- Someone famous in <cite title="Source Title">Source Title</cite> -->
         </figcaption>
     </figure>
 </div>
