--- a/src/app/Our-Services/services.component.css
+++ b/src/app/Our-Services/services.component.css
@@ -15,3 +15,38 @@ u {
 
     /* box-shadow: 1px 3px 8px #ffffff,1px 3px 8px #ffffff,1px 3px 8px #ffffff,1px 3px 8px #ffffff; */
 }
+
+.card{
+    cursor: pointer;
+    overflow: hidden;
+    display: flex;
+}
+.card-body {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(rgba(0, 0, 0, .1), #0fe);
+    color: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    opacity: 0;
+    transform: translateY(100%);
+    transition: .5s ease;
+}
+
+.card:hover .card-body {
+    transform: translateY(0);
+
+}
+.card-body:hover {
+    opacity: .8;
+}
+
+.card img {
+    width: 100%;
+    height: 100%;
+}
