--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,20 +1,22 @@
-<div class=" bg-dark" style="border: 1px solid rgb(7, 7, 7);">
+<div class=" bg-light" style="border: 1px solid rgb(255, 255, 255); font-family: poppins;">
 
-    <div class="col address m-5">
+    <img src="assets/About-us.jpg" alt="" class="w-100" height="200">
+    <div class="col address">
 
-        <h1 class="text-center">Get in touch</h1>
+        <!-- <h1 class="text-center">Get in touch</h1>
         <p class="text-center">Lore optio sit minima. Harum quaerat veniam optio soluta cumque a eos aspernatur.
             Delectus, quasi?
-        </p>
-        <div class="row m-5">
+        </p> -->
+        <div class="row m-5 mt-1">
 
             <div class="col">
 
-                <h4><a href="https://maps.app.goo.gl/CeyqYnuK5q21NpdV6"><i class="fa-solid fa-location-dot"></i></a>
+                <h4>
+                    <a href="https://maps.app.goo.gl/CeyqYnuK5q21NpdV6"><i class="fa-solid fa-location-dot"></i></a>
                 </h4>
                 <p class="text-center">
                     <span>Address :</span>
-                    Saray Madan Baheriya <br>Sikandra Prayagraj <br><span class="text-danger">212109</span>
+                    Saray Madan Baheriya <br>Sikandra Prayagraj <br><span class="text-primary">212109</span>
                 </p>
             </div>
 
@@ -40,10 +42,13 @@
             </div>
         </div>
     </div>
+    <hr style="color: red; border: 2px solid rgb(0, 204, 255);">
 
+    <div class="text mt-1">
+        <h1 class="text-center text-info ">Have some query mail us</h1>
+        <p class="text-center text-warning">Visit our office or drop a word if you have any queries.</p>
+    </div>
 
-    <h1 class="text-center text-info ">Have some query mail us</h1>
-    <p class="text-center text-warning">Visit our office or drop a word if you have any queries.</p>
     <div class=" row m-4">
 
 
@@ -51,10 +56,11 @@
             <img class="img-fluid" src="assets/Contact-img.svg" alt="" height="400" width="500">
         </div> -->/
         <div class="col-5">
-            <iframe
+            <!-- <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3597.2366797400705!2d81.99712601000708!3d25.630269177340566!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399ab1d02c3dfec1%3A0x4f7feeca618b7e9f!2sTaza%20Akhbar!5e0!3m2!1sen!2sin!4v1706091841500!5m2!1sen!2sin"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe> -->
         </div>
 
         <div class="col-6 form mt-5">
