--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-info">
   <div class="container-fluid">
+
     <a class="navbar-brand" routerLink="/home">
       <img src="assets/logo.png" alt="" height="70" width="70" style="border-radius: 50%; margin-left: 30px;">
     </a>
@@ -7,6 +8,7 @@
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
@@ -36,11 +38,12 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" routerLink="/image">Images</a></li>
-            <li><a class="dropdown-item" routerLink="/video">Videos</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" routerLink="/video">Videos</a></li>
+            
+            <!-- <li><a class="dropdown-item" href="#">Something else here</a></li> -->
           </ul>
         </li>
 
@@ -49,7 +52,7 @@
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form> -->
-      <button class="btn btn-danger ms-3" routerLink="login">Login</button>
+      <button class="btn btn-danger mx-5" routerLink="login">Login</button>
     </div>
   </div>
 </nav>
