--- a/src/app/images/images.component.css
+++ b/src/app/images/images.component.css
@@ -1,5 +1,54 @@
-.card:hover{
-    /* margin-top: 2px; */
-    box-shadow: 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030;
-/* transition: all 0.5s ease-in; */
+.card:hover {
+
+    /* box-shadow: 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030; */
+    transition: all 0.5s ease-in;
+}
+
+.card img {
+    width: 100%;
+    height: 100%;
+}
+
+/* .card:hover img {
+
+    transform: scale(1.1);
+} */
+.card {
+    cursor: pointer;
+    overflow: hidden;
+    display: flex;
+}
+
+.card-body {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(rgba(0, 0, 0, .1), #0fe);
+    color: #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    opacity: 0;
+    transform: translateY(100%);
+    transition: .5s ease;
+}
+
+.card:hover .card-body {
+    transform: translateY(0);
+
+}
+
+.card-text {
+    font-family: roboto;
+    font-weight: bold;
+    text-align: center;
+    height: auto;
+    width: 100%;
+}
+
+.card-body:hover {
+    opacity: 1;
 }
