--- a/src/styles.css
+++ b/src/styles.css
@@ -4,15 +4,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&display=swap');
 
 body {
-    background: #bbdefb !important;
+    /* background: #e0f1ff !important; */
 
-    /* background: #e3f2fd !important; */
+    background: #e3f2fd !important;
 }
-
-/* html,
-body {
-    height: 100%;
-} */
 
 body {
     margin: 0;
